libs/scene-format/GRAMMAR.ebnf
(* Scene Format Grammar - EBNF *)
(* A configuration format for game scenes with entities, assets, and components *)

(* ============================================================================ *)
(* Top Level *)
(* ============================================================================ *)

scene_file = { declaration } ;

declaration = scene_declaration
            | entity_declaration
            | asset_declaration
            ;

(* ============================================================================ *)
(* Declarations *)
(* ============================================================================ *)

scene_declaration = "[", identifier, ":", "scene", "]", INDENT,
                    { declaration },
                    DEDENT ;

entity_declaration = "[", identifier, ":", "entity", "]", INDENT,
                     { component_block },
                     DEDENT ;

asset_declaration = "[", identifier, ":", "asset", identifier, "]", INDENT,
                    { property },
                    DEDENT ;

(* ============================================================================ *)
(* Components *)
(* ============================================================================ *)

component_block = component_declaration, INDENT,
                  { property | shape_block },
                  DEDENT ;

component_declaration = "[", identifier, "]" ;

shape_block = "[", identifier, ":", "shape", "]", INDENT,
              { property },
              DEDENT ;

(* ============================================================================ *)
(* Properties *)
(* ============================================================================ *)

property = identifier, ":", type_annotation, value ;

type_annotation = "vec2"
                | "vec3"
                | "f32"
                | "i32"
                | "u32"
                | "bool"
                | "string"
                | "color"
                | "asset_ref"
                | identifier  (* for custom types *)
                ;

(* ============================================================================ *)
(* Values *)
(* ============================================================================ *)

value = number
      | string_literal
      | color_literal
      | boolean_literal
      | vector_value
      | identifier  (* for asset references *)
      ;

vector_value = "{", number, ",", number, [ ",", number ], "}" ;

boolean_literal = "true" | "false" ;

(* ============================================================================ *)
(* Lexical Elements *)
(* ============================================================================ *)

(* Identifiers *)
identifier = letter, { letter | digit | "_" } ;

(* Numbers *)
number = [ "-" ], digit, { digit }, [ ".", digit, { digit } ] ;

(* Strings *)
string_literal = '"', { string_char }, '"' ;
string_char = ? any character except '"' or newline ?
            | newline  (* multiline strings allowed *)
            ;

(* Colors *)
color_literal = "#", hex_digit, hex_digit, hex_digit,
                hex_digit, hex_digit, hex_digit,
                [ hex_digit, hex_digit ]  (* optional alpha *)
                ;

(* Comments *)
comment = "//", { ? any character ? }, newline ;

(* ============================================================================ *)
(* Character Classes *)
(* ============================================================================ *)

letter = "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K"
       | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V"
       | "W" | "X" | "Y" | "Z" | "a" | "b" | "c" | "d" | "e" | "f" | "g"
       | "h" | "i" | "j" | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r"
       | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z" | "_" ;

digit = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;

hex_digit = digit | "A" | "B" | "C" | "D" | "E" | "F"
          | "a" | "b" | "c" | "d" | "e" | "f" ;

newline = "\n" ;

(* ============================================================================ *)
(* Indentation Rules (Lexical) *)
(* ============================================================================ *)

(* INDENT and DEDENT are special tokens generated by the lexer:
   - INDENT: emitted when indentation increases by exactly 2 spaces
   - DEDENT: emitted when indentation decreases by any multiple of 2 spaces
   - Indentation must be spaces only (no tabs)
   - Each indentation level = 2 spaces
*)

(* ============================================================================ *)
(* Example *)
(* ============================================================================ *)

(*
[TestScene:scene]

[Player:entity]
  [Transform]
    position:vec2 {0.0, 0.0}
    rotation:f32 0.0
    scale:f32 1.0

  [Sprite]
    [Circle:shape]
      radius:f32 5.0
      fill_color:color #FF0000
    visible:bool true

[Font:asset font]
  path:string "Arial.ttf"
*)
